cmake_minimum_required(VERSION 3.10)
project(p101_posix_examples
        VERSION 0.0.1
        DESCRIPTION ""
        LANGUAGES C)

add_subdirectory(aio)
add_subdirectory(arpa)
add_subdirectory(ctype)
add_subdirectory(dirent)
add_subdirectory(dlfcn)
add_subdirectory(fcntl)
add_subdirectory(fnmatch)
add_subdirectory(glob)
add_subdirectory(grp)
add_subdirectory(iconv)
add_subdirectory(langinfo)
add_subdirectory(locale)
add_subdirectory(net)
add_subdirectory(netdb)
add_subdirectory(nl_types)
add_subdirectory(poll)
add_subdirectory(pthread)
add_subdirectory(pwd)
add_subdirectory(regex)
add_subdirectory(sched)
add_subdirectory(semaphore)
add_subdirectory(setjmp)
add_subdirectory(signal)
add_subdirectory(stdio)
add_subdirectory(stdlib)
add_subdirectory(string)
add_subdirectory(strings)
add_subdirectory(sys)
add_subdirectory(termios)
add_subdirectory(time)
add_subdirectory(unistd)
add_subdirectory(wchar)
add_subdirectory(wctype)
add_subdirectory(wordexp)
